# AutoMiner

./: .gitignore  LICENSE  ProgramList.txt  README.md  app.py  pyproject.toml  requirements.txt  setup.py
minermanager/: __init__.py  app.py
minermanager/configs/: ConfigLoader.py
minermanager/miners/: GeneralMiner.py  Miner.py
minermanager/process/: ProcessListUpdater.py  ProcessSearcher.py
minermanager/resourcemanager/: FileLoader.py
minermanager/resources/: config.yaml
