[tool.poetry]
name = "minermanager"
version = "0.1.0"
description = "A tool to automate the pausing of miner when define programs are runnend"
authors = ["MrFastwind <fastwind.k@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
rope = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
